test/scc/type/semantic-errors/005.a
005.t:4:5: error: size of array must be greater than zero